change currency to dollars

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -35,6 +35,6 @@ ru:
     currency:
       format:
         # Формат отображения валюты и обозначение самой валюты
-        unit: "₽"
+        unit: "$"
         precision: 0
 
